+ Simplified authentication check + Added firstName & lastName onboarding prompts + Added address onboarding prompt (WIP) + Added profile update endpoint
