# server/swagger/v1/swagger.yaml
@@ -4,6 +4,28 @@ info:
   title: API V1
   version: v1
 paths:
+  "/profiles":
+    put:
+      summary: Update user profile
+      tags:
+      - Profile
+      operationId: updateProfile
+      parameters: []
+      responses:
+        '200':
+          description: user profile updated
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/user_dto"
+        '422':
+          description: invalid request
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/profile"
   "/sessions":
     post:
       summary: Creates an authenticated session
@@ -100,12 +122,24 @@ components:
           type: string
         phone_number:
           type: string
-        profile_status:
-          "$ref": "#/components/schemas/profile_status"
+        profile:
+          "$ref": "#/components/schemas/profile"
+        complete_profile:
+          type: boolean
+        complete_name:
+          type: boolean
+        complete_address:
+          type: boolean
+        complete_billing:
+          type: boolean
       required:
       - id
       - phone_number
-      - profile_status
+      - complete_profile
+      - complete_name
+      - complete_address
+      - complete_billing,
+      - profile
     register_dto:
       type: object
       properties:
@@ -123,10 +157,38 @@ components:
       required:
       - phone_number
       - confirmation_pin
-    profile_status:
-      type: string
-      enum:
-      - profile_status_name
-      - profile_status_address
-      - profile_status_billing
-      - profile_status_complete
+    profile:
+      type: object
+      properties:
+        first_name:
+          type: string
+        last_name:
+          type: string
+        address:
+          "$ref": "#/components/schemas/profile_address"
+      required:
+      - first_name
+      - last_name
+      - address
+    profile_address:
+      type: object
+      properties:
+        street_number:
+          type: string
+        street_name:
+          type: string
+        unit_number:
+          type: string
+        city:
+          type: string
+        province:
+          type: string
+        postal_code:
+          type: string
+      required:
+      - street_number,
+      - street_name,
+      - unit_number,
+      - city,
+      - province,
+      - postal_code
